# loopclosure_for_aloam

./: CMakeLists.txt  README.md  package.xml
Scancontext/: Scancontext.cpp  Scancontext.h
config/: sc_config.yaml
launch/: sc_optimization.launch
src/: SC_Optimization_node.cpp
